# incident-investigator

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/core/: config.py
app/db/: loader.py  models.py
app/ingestion/: bgl_parser.py
app/processing/: template_extractor.py
docs/: interview-notes.md  setup-verified.md
scripts/: download_data.py  init_db.sql  load_data.py  verify_setup.py
tests/: test_bgl_parser.py  test_loader.py  test_smoke.py  test_template_extractor.py
